@@ -3,6 +3,7 @@ package kr.service.okr.project.persistence.entity.project;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.hibernate.annotations.SQLDelete;
 import org.hibernate.annotations.Where;
@@ -117,11 +118,12 @@ public class ProjectJpaEntity extends BaseEntity {
 	}
 
 	public Project toDomain() {
-		final Project project = Project.builder()
+
+		return Project.builder()
 			.id(this.id)
 			.projectToken(this.projectToken)
-			.teamMember(this.teamMember.stream().map(TeamMemberJpaEntity::toDomain).toList())
-			.keyResults(this.keyResults.stream().map(KeyResultJpaEntity::toDomain).toList())
+			.teamMember(this.teamMember.stream().map(TeamMemberJpaEntity::toDomain).collect(Collectors.toList()))
+			.keyResults(this.keyResults.stream().map(KeyResultJpaEntity::toDomain).collect(Collectors.toList()))
 			.startDate(this.startDate)
 			.endDate(this.endDate)
 			.type(this.type)
@@ -129,8 +131,6 @@ public class ProjectJpaEntity extends BaseEntity {
 			.progress(this.progress)
 			.completed(this.completed)
 			.build();
-
-		return project;
 
 	}
 
